src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Google_Alert_Cancel_URL__c</fullName>
        <inlineHelpText>Generated automatically by the &quot;Google Alerts to Chatter&quot; application. This link will cancel the Google Alert for this account.</inlineHelpText>
        <label>Google Alert Cancel URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_Alert_Search_Term_s__c</fullName>
        <inlineHelpText>What terms should Google search for? The default is the account&apos;s name. To change the search term(s), cancel any active Google Alerts for this account, change this field, and sign up for alerts.</inlineHelpText>
        <label>Google Alert Search Term(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Google_Alerts_to_Chatter_Status__c</fullName>
        <description>Part of the &quot;Google Apps to Chatter&quot; application.</description>
        <inlineHelpText>Choose &quot;Sign Up&quot; to initiate a Google Alert to Chatter for this contact. Choose &quot;Cancel&quot; to stop it.</inlineHelpText>
        <label>Google Alerts to Chatter Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Campaign__c</fullName>
        <label>Google Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Keyword__c</fullName>
        <label>Google Keyword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Text_Ad__c</fullName>
        <label>Google Text Ad</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HM_Corporate_Tax_ID__c</fullName>
        <label>HM Corporate Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HM_Corporation_Address__c</fullName>
        <description>Address for Corporation; TSG DB has all the data in a single field. 5/2 Per Beth Smith-Usually, the contracting department (Lynn Leger, etc.) would be populating this field, on the rare occasion, recruiters might.  I am OK with them “owning” this field, therefore, you might want to contact them for direction.</description>
        <label>HM Corporation Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HM_Corporation_City__c</fullName>
        <label>HM Corporation City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HM_Corporation_Name__c</fullName>
        <description>TSG Corporation Field - Doc Corporation</description>
        <label>HM Corporation Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HM_Corporation_State__c</fullName>
        <label>HM Corporation State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HM_Corporation_Verification_Date__c</fullName>
        <label>HM Corporation Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HM_Corporation_Zip_Postal_Code__c</fullName>
        <label>HM Corporation Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_this_employee_worked_for_another_GI__c</fullName>
        <label>Has this employee worked for another GI</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_this_employee_worked_for_another_GP__c</fullName>
        <label>Has this employee worked for another GP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_PFA_Level__c</fullName>
        <label>High PFA Level</label>
        <summarizedField>Provider_Facility_Associations__c.Provider_Facility_Num__c</summarizedField>
        <summaryForeignKey>Provider_Facility_Associations__c.Provider__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Request_Approved_Denied__c</fullName>
        <label>Hiring Request Approved/Denied</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hobbies_Interest__c</fullName>
        <label>Hobbies/Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exercise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hiking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skiing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <label>Home City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Fax_Number__c</fullName>
        <label>Home Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_State__c</fullName>
        <label>Home State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Street_Address__c</fullName>
        <label>Home Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Zip_Postal_Code__c</fullName>
        <label>Home Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_CEO_Firstname__c</fullName>
        <label>Hospital CEO Firstname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_CEO__c</fullName>
        <label>Hospital CEO Lastname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Long_at_Current_Address__c</fullName>
        <label>How Long at Current Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Long_at_Previous_Address__c</fullName>
        <label>How Long at Previous Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Username__c</fullName>
        <label>IM Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impaired_Physican__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impaired Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_State_Licenses__c</fullName>
        <label>Inactive State Licenses</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the business contact is actively working at a facility. If checked they are no longer active. Exclued from MCO Reports</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncentivePrimaryRecruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PrimaryRecruiter</description>
        <label>Incentive - Primary Recruiter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001HXKcEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncentiveRecruiter2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>2nd recruiter to receive incentive for a new recruit.</description>
        <label>Incentive - Recruiter2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001HXLZEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncentiveRecruiter3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>3rd recruiter to receive incentive.</description>
        <label>Incentive -Recruiter3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001HXLeEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Date__c</fullName>
        <description>Incentive Date used in the Recruiter incentive report</description>
        <label>Incentive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Tax_ID__c</fullName>
        <label>Individual Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Preference__c</fullName>
        <label>Information Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine Industry Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry News &amp; Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From file DocTracking, TSG field = Ins</description>
        <label>Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Comments__c</fullName>
        <description>Mapped from Long Term  Interest (L-Tinterest)</description>
        <label>Interest Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interested_in_Emergency_HM_Directorship__c</fullName>
        <label>Interested in Emergency/HM/Directorship</label>
        <picklist>
            <picklistValues>
                <fullName>Hospitalists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interested_in_Full_Time_Part_Time_Locum__c</fullName>
        <label>Interested in FT/PT/Locum Tenens</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locum Tenens</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interested_in_Leadership_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Leadership Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Multiple_States__c</fullName>
        <label>Interested in Multiple States</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Fax__c</fullName>
        <label>International Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>International_Home__c</fullName>
        <label>International Home</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>International_Mobile__c</fullName>
        <label>International Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>International_Work__c</fullName>
        <label>International Work</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Interview_ID__c</fullName>
        <label>Informavores Interview ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Functions__c</fullName>
        <label>Job Functions</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admitting Clerk Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Information Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Medical Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief of Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief of Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Outpatient Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNO/DON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Compliance Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director Emergency Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Quality  Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED Nurse/Clinical Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED Reg. Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIM Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalist Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infection Control</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Job_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <picklist>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Processing Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM Payment Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indexing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Posting Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreCoder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Lead</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyword</label>
        <referenceTo>SFGA__Keyword__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language_s__c</fullName>
        <label>Language(s)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_AMA_Date__c</fullName>
        <label>Last AMA Date</label>
        <summarizedField>Qualification__c.Query_Received__c</summarizedField>
        <summaryFilterItems>
            <field>Qualification__c.Type__c</field>
            <operation>equals</operation>
            <value>AMA</value>
        </summaryFilterItems>
        <summaryForeignKey>Qualification__c.Provider__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_AOA_Date__c</fullName>
        <label>Last AOA Date</label>
        <summarizedField>Qualification__c.Query_Received__c</summarizedField>
        <summaryFilterItems>
            <field>Qualification__c.Type__c</field>
            <operation>equals</operation>
            <value>AOA</value>
        </summaryFilterItems>
        <summaryForeignKey>Qualification__c.Provider__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Background_Date__c</fullName>
        <label>Last Background Date</label>
        <summarizedField>Qualification__c.Query_Received__c</summarizedField>
        <summaryFilterItems>
            <field>Qualification__c.Type__c</field>
            <operation>equals</operation>
            <value>Criminal Background Check</value>
        </summaryFilterItems>
        <summaryForeignKey>Qualification__c.Provider__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Databank_On__c</fullName>
        <label>Last Databank On</label>
        <summarizedField>Qualification__c.Query_Received__c</summarizedField>
        <summaryFilterItems>
            <field>Qualification__c.Type__c</field>
            <operation>equals</operation>
            <value>DataBank</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Qualification__c.PDS_Date_Unenrolled__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Qualification__c.PDS_Date_Enrolled__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Qualification__c.Provider__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_PFA_Created_Date__c</fullName>
        <label>Last PFA Created Date</label>
        <summarizedField>Provider_Facility_Associations__c.CreatedDate</summarizedField>
        <summaryForeignKey>Provider_Facility_Associations__c.Provider__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Reviewed_Date__c</fullName>
        <description>Last Reviewed - From TSG; Used to indicate the Last annual or 6 month review done by Staff.</description>
        <label>Last Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Form_Source__c</fullName>
        <label>Lead Form Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>